--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@cypress/react18": "^2.0.1",
     "@testing-library/react": "^16.0.1",
     "cypress": "^13.15.0",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "tailwindcss": "^3.4.14"
   }
 }
